@@ -17,8 +17,6 @@
  * @version         $Id$
  */
 
-defined('XOOPS_ROOT_PATH') || exit('Restricted access');
-
 /**
  * Class XooContactPreferences
  */
@@ -38,7 +36,7 @@ class XooContactPreferences
         $xoops            = Xoops::getInstance();
         $this->configFile = 'config.' . $xoops->module->dirname() . '.php';
 
-        $this->configPath = XOOPS_VAR_PATH . '/configs/' . $this->module_dirname . '/';
+        $this->configPath = \XoopsBaseConfig::get('var-path') . '/configs/' . $this->module_dirname . '/';
 
         $this->basicConfig = $this->loadBasicConfig();
         $this->config      = @$this->loadConfig();
@@ -126,7 +124,7 @@ class XooContactPreferences
      */
     public function writeConfig($config)
     {
-        if ($this->CreatePath($this->configPath)) {
+        if ($this->createPath($this->configPath)) {
             $file_path = $this->configPath . $this->configFile;
             XoopsLoad::load('XoopsFile');
             $file = XoopsFile::getHandler('file', $file_path);
@@ -142,10 +140,10 @@ class XooContactPreferences
      *
      * @return bool
      */
-    private function CreatePath($pathname, $pathout = XOOPS_ROOT_PATH)
+    private function createPath($pathname, $pathout = XOOPS_ROOT_PATH)
     {
         $xoops    = Xoops::getInstance();
-        $pathname = substr($pathname, strlen(XOOPS_ROOT_PATH));
+        $pathname = substr($pathname, strlen(\XoopsBaseConfig::get('root-path')));
         $pathname = str_replace(DIRECTORY_SEPARATOR, '/', $pathname);
 
         $dest  = $pathout;
@@ -158,7 +156,7 @@ class XooContactPreferences
                     if (!mkdir($dest, 0755)) {
                         return false;
                     } else {
-                        $this->WriteIndex($xoops->path('uploads'), 'index.html', $dest);
+                        $this->writeIndex($xoops->path('uploads'), 'index.html', $dest);
                     }
                 }
             }
@@ -174,10 +172,10 @@ class XooContactPreferences
      *
      * @return bool
      */
-    private function WriteIndex($folder_in, $source_file, $folder_out)
+    private function writeIndex($folder_in, $source_file, $folder_out)
     {
         if (!is_dir($folder_out)) {
-            if (!$this->CreatePath($folder_out)) {
+            if (!$this->createPath($folder_out)) {
                 return false;
             }
         }
@@ -196,7 +194,7 @@ class XooContactPreferences
      *
      * @return array
      */
-    public function Prepare2Save($data = null, $module = true)
+    public function prepare2Save($data = null, $module = true)
     {
         if (!isset($data)) {
             $data = $_POST;
@@ -205,9 +203,9 @@ class XooContactPreferences
         $config = array();
         foreach (array_keys($data) as $k) {
             if (is_array($data[$k])) {
-                $config[$k] = $this->Prepare2Save($data[$k], false);
+                $config[$k] = $this->prepare2Save($data[$k], false);
             } else {
-                if (strstr($k, $this->module_dirname . '_') || !$module) {
+                if (!$module || false !== strpos($k, $this->module_dirname . '_')) {
                     $config[$k] = $data[$k];
                 }
             }
