@@ -17,8 +17,6 @@
  * @version         $Id$
  */
 
-defined('XOOPS_ROOT_PATH') || exit('Restricted access');
-
 return array(
     'can_be_hidden' => array(4, 6, 7)
 );
