@@ -1,7 +1,5 @@
 <?php
-defined('XOOPS_ROOT_PATH') || exit('Restricted access');
 
 return $config = array(
     'xoocontact_welcome'     => '',
-    'xoocontact_copymessage' => 0
-);
+    'xoocontact_copymessage' => 0);
