@@ -17,9 +17,7 @@
  * @version         $Id$
  */
 
-defined('XOOPS_ROOT_PATH') || exit('Restricted access');
-
-include_once XOOPS_ROOT_PATH . '/modules/xoocontact/install/install.php';
+include_once __DIR__ . '/install.php';
 
 /**
  * @return bool
