@@ -6,6 +6,7 @@
 - added PhpDoc comments (mamba)
 - added namespaces (mamba)
 - added docs files (mamba)
+- replaced $system->cleanVars with Request:: (mamba)
 
 <hr><strong>1.0 Alpha 1         (2012-10)</strong>
 - First release (Dugris)
